--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,18 +26,18 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Electron: main",
-      "runtimeExecutable": "${workspaceFolder}\\node_modules\\.bin\\electron",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
       "windows": {
-        "runtimeExecutable": "${workspaceFolder}\\node_modules\\.bin\\electron.cmd"
+        "runtimeExecutable": "${workspaceFolder}\\node_modules\\.bin\\electron.cmd",
       },
       "runtimeArgs": [
         ".",
         "--remote-debugging-port=9223",
         "--inspect=9229"
       ],
-      "program": "${workspaceFolder}\\dist\\main\\main.js",
+      "program": "${workspaceFolder}/dist/main/main.js",
       "outFiles": [
-        "${workspaceFolder}\\dist\\main\\*.js"
+        "${workspaceFolder}/dist/main/*.js"
       ],
     }
   ]
