--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/router": "6.1.7",
     "core-js": "^2.5.7",
     "ngx-electron": "^1.0.4",
+    "nodemailer": "^4.6.8",
     "rxjs": "^6.3.2",
     "zone.js": "^0.8.26"
   },
