--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main/main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "start:script": "node ./start -c",
     "start:electron": "electron .",
     "watch": "npm-run-all --parallel watch:main watch:renderer ",
@@ -16,7 +16,8 @@
     "build:renderer:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "files": [
     "*.js",
@@ -27,6 +28,7 @@
   "dependencies": {
     "@angular/animations": "^6.1.7",
     "@angular/cdk": "^6.4.7",
+    "@angular/cli": "6.2.1",
     "@angular/common": "6.1.7",
     "@angular/compiler": "6.1.7",
     "@angular/core": "6.1.7",
@@ -37,6 +39,7 @@
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/router": "6.1.7",
     "core-js": "^2.5.7",
+    "express": "^4.16.3",
     "ngx-electron": "^1.0.4",
     "nodemailer": "^4.6.8",
     "rxjs": "^6.3.2",
@@ -44,7 +47,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "6.2.1",
     "@angular/compiler-cli": "6.1.7",
     "@angular/language-service": "6.1.7",
     "@types/chokidar": "^1.7.4",
@@ -72,5 +74,9 @@
     "webpack": "^4.17.2",
     "webpack-node-externals": "^1.7.2",
     "yargs-parser": "^9.0.2"
+  },
+  "engines": {
+    "node": "6.11.1",
+    "npm": "3.10.9"
   }
 }
